--- a/notebooks_demo/configs/config.yaml
+++ b/notebooks_demo/configs/config.yaml
@@ -15,6 +15,7 @@ is_weighted_class_loss: True
 
 # prob. of using ["mixup", "cutmix", "cross_entropy"] loss
 mixup_alpha: 0.4
+cutmix_alpha: 1
 train_loss_prob: [0, 0, 1.0]
 # # weighting of [root, vowel, consonant]
 head_weights: [0.5, 0.25, 0.25]
